<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="24dp"
            android:text="@string/about_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/version" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/about_author" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_attribution" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_attribution_text" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/navi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fadingEdge="none"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_introduction"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"

            android:button="@color/red"
            android:gravity="center"
            android:onClick="onClick_introduction"
            android:drawableTop="@drawable/ic_intro"
            android:text="@string/introduction" />

        <RadioButton
            android:id="@+id/button_mainmap"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"

            android:button="@color/green"
            android:gravity="center"
            android:onClick="onClick_mainmap"
            android:drawableTop="@drawable/ic_map"
            android:text="@string/mainmap" />


        <RadioButton
            android:id="@+id/button_panorama"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"

            android:button="@color/blue"
            android:gravity="center"
            android:onClick="onClick_panorama"
            android:drawableTop="@drawable/ic_gallery"
            android:text="@string/gallery" />


        <RadioButton
            android:id="@+id/button_about"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"

            android:button="@color/yellow"
            android:gravity="center"
            android:onClick="onClick_about"
            android:drawableTop="@drawable/ic_about"
            android:text="@string/about"
            android:enabled="false"
            android:elegantTextHeight="false" />
    </RadioGroup>

</RelativeLayout>
